--- a/15wlgcsxx/pom.xml
+++ b/15wlgcsxx/pom.xml
@@ -116,7 +116,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.8</version>
 		</dependency> 
-
+			<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind——kaiwanxiao</artifactId>
+			<version>2.8.8</version>
+		</dependency> 
 
 	</dependencies>
   
